Update project name to "api-videos" in package.json and package-lock.json; enhance README.md with production endpoint and detailed API endpoints documentation.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "02---rocketseat",
+  "name": "api-videos",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
@@ -9,7 +9,7 @@
     "dev": "node --watch --no-warnings server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "vagner zezo",
   "license": "ISC",
   "description": "",
   "dependencies": {
